[package]
name = "macaddress"
version = "0.1.0"
authors = ["critical-path"]
edition = "2018"
include = ["Cargo.toml", "./src/lib.rs"]
keywords = ["rust", "media access control", "mac", "mac address", "networking"]
description = "The macaddress library makes it easy to work with media access control (MAC) addresses."
repository = "https://github.com/critical-path/macaddress-rs"
readme = "README.md"
license = "MIT"
publish = false

[dependencies]
lazy_static = "1.3.0"
regex = "1"
